--- a/signing-providers/package.json
+++ b/signing-providers/package.json
@@ -12,6 +12,7 @@
     "@elrondnetwork/erdjs-extension-provider": "2.0.2",
     "@elrondnetwork/erdjs-hw-provider": "2.0.4",
     "@elrondnetwork/erdjs-wallet-connect-provider": "2.0.3",
+    "@elrondnetwork/erdjs-walletcore": "1.0.0",
     "@elrondnetwork/erdjs-web-wallet-provider": "2.1.1"
   },
   "devDependencies": {
