--- a/signing-providers/package.json
+++ b/signing-providers/package.json
@@ -11,9 +11,10 @@
     "@elrondnetwork/erdjs": "10.2.7",
     "@elrondnetwork/erdjs-extension-provider": "2.0.2",
     "@elrondnetwork/erdjs-hw-provider": "2.0.4",
-    "@elrondnetwork/erdjs-wallet-connect-provider": "2.0.3",
+    "@elrondnetwork/erdjs-wallet-connect-provider": "2.1.0-beta.2",
     "@elrondnetwork/erdjs-walletcore": "1.0.0",
-    "@elrondnetwork/erdjs-web-wallet-provider": "2.1.1"
+    "@elrondnetwork/erdjs-web-wallet-provider": "2.1.1",
+    "qrcode": "1.5.1"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
