--- a/.github/workflows/package-lock-checks.yml
+++ b/.github/workflows/package-lock-checks.yml
@@ -33,4 +33,12 @@ jobs:
           npm install
           cmp package-lock.json package-lock-copy.json
 
+      - name: Check package-lock.json for "notebooks"
+        run: |
+          cd notebooks
+          cp package-lock.json package-lock-copy.json
+          rm -f package-lock.json
+          npm install
+          cmp package-lock.json package-lock-copy.json
+
       # TODO: replicate the step above for other folders, as necessary
