--- a/wallet/package.json
+++ b/wallet/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Examples",
   "scripts": {},
-  "author": "ElrondNetwork",
+  "author": "MultiversX",
   "dependencies": {
     "axios": "0.24.0",
     "@elrondnetwork/erdjs-walletcore": "2.1.0",
