update README.md and add qrcode as optional dependency that is needed to build the example

--- a/signing-providers/package.json
+++ b/signing-providers/package.json
@@ -7,6 +7,9 @@
     "build": "browserify src/index.js -o out/app.js --standalone app -p esmify"
   },
   "author": "MultiversX",
+  "optionalDependencies": {
+    "qrcode": "1.5.1"
+  },
   "dependencies": {
     "@elrondnetwork/erdjs": "10.2.7",
     "@elrondnetwork/erdjs-extension-provider": "2.0.2",
