--- a/signing-providers/package.json
+++ b/signing-providers/package.json
@@ -13,7 +13,7 @@
     "@elrondnetwork/erdjs-hw-provider": "2.0.4",
     "@elrondnetwork/erdjs-walletcore": "1.0.0",
     "@elrondnetwork/erdjs-web-wallet-provider": "2.1.1",
-    "@multiversx/sdk-wallet-connect-provider": "3.1.0-beta.10",
+    "@multiversx/sdk-wallet-connect-provider": "3.1.0",
     "qrcode": "1.5.1"
   },
   "devDependencies": {
