--- a/wallet/package.json
+++ b/wallet/package.json
@@ -6,8 +6,8 @@
   "author": "MultiversX",
   "dependencies": {
     "axios": "0.24.0",
-    "@elrondnetwork/erdjs-walletcore": "2.1.0",
-    "@elrondnetwork/erdjs": "11.0.0"
+    "@multiversx/sdk-wallet": "3.0.0",
+    "@multiversx/sdk-core": "11.4.1"
   },
   "devDependencies": {}
 }
