--- a/notebooks/package.json
+++ b/notebooks/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "@elrondnetwork/erdjs": "11.1.2",
-    "@elrondnetwork/erdjs-network-providers": "1.2.0",
-    "@elrondnetwork/erdjs-walletcore": "2.1.0"
+    "@multiversx/sdk-core": "11.4.1",
+    "@multiversx/sdk-network-providers": "1.3.0",
+    "@multiversx/sdk-wallet": "3.0.0"
   }
 }
