--- a/signing-providers/package.json
+++ b/signing-providers/package.json
@@ -8,9 +8,9 @@
   },
   "author": "MultiversX",
   "dependencies": {
-    "@multiversx/sdk-core": "11.4.1",
+    "@multiversx/sdk-core": "12.0.1-beta.4",
     "@multiversx/sdk-extension-provider": "2.0.7",
-    "@multiversx/sdk-hw-provider": "3.0.3",
+    "@multiversx/sdk-hw-provider": "git+https://github.com/multiversx/mx-sdk-js-hw-provider#tx-options-03",
     "@multiversx/sdk-wallet": "3.0.0",
     "@multiversx/sdk-web-wallet-provider": "2.3.0",
     "@multiversx/sdk-wallet-connect-provider": "3.1.0",
