--- a/wallet/package.json
+++ b/wallet/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "axios": "0.24.0",
     "@multiversx/sdk-wallet": "4.0.0",
-    "@multiversx/sdk-core": "12.0.1-beta.4"
+    "@multiversx/sdk-core": "12.1.0"
   },
   "devDependencies": {}
 }
