--- a/signing-providers/package.json
+++ b/signing-providers/package.json
@@ -8,7 +8,8 @@
   },
   "author": "MultiversX",
   "dependencies": {
-    "@multiversx/sdk-core": "12.4.2",
+    "@multiversx/sdk-core": "12.5.0",
+    "@multiversx/sdk-network-providers": "1.5.0",
     "@multiversx/sdk-extension-provider": "3.0.0",
     "@multiversx/sdk-hw-provider": "6.1.0",
     "@multiversx/sdk-wallet": "4.0.0",
