--- a/codec/package.json
+++ b/codec/package.json
@@ -1,7 +1,7 @@
 {
     "type": "module",
     "dependencies": {
-        "@multiversx/sdk-core": "12.13.0-beta.1",
+        "@multiversx/sdk-core": "12.14.0",
         "@multiversx/sdk-network-providers": "2.1.0",
         "minimist": "1.2.8"
     }
