--- a/cookbook/package.json
+++ b/cookbook/package.json
@@ -1,9 +1,10 @@
 {
-    "type": "module",
-    "dependencies": {
-        "@multiversx/sdk-wallet": "4.2.0",
-        "@multiversx/sdk-core": "12.18.0",
-        "@multiversx/sdk-network-providers": "2.2.1",
-        "axios": "1.6.5"
-    }
+  "type": "module",
+  "dependencies": {
+    "@multiversx/sdk-wallet": "4.3.0",
+    "@multiversx/sdk-core": "13.0.0-beta.4",
+    "@multiversx/sdk-network-providers": "2.3.0",
+    "@multiversx/sdk-dapp": "2.28.7",
+    "axios": "1.6.5"
+  }
 }
