--- a/cookbook/package.json
+++ b/cookbook/package.json
@@ -2,9 +2,10 @@
   "type": "module",
   "dependencies": {
     "@multiversx/sdk-wallet": "4.4.0",
-    "@multiversx/sdk-core": "13.0.0-beta.11",
+    "@multiversx/sdk-core": "13.0.0-beta.12",
     "@multiversx/sdk-network-providers": "2.4.1",
     "@multiversx/sdk-dapp": "2.28.7",
-    "axios": "1.6.5"
+    "axios": "1.6.5",
+    "chai": "5.1.0"
   }
 }
