--- a/signing-providers/package.json
+++ b/signing-providers/package.json
@@ -12,6 +12,7 @@
     "@multiversx/sdk-dapp-utils": "0.1.0",
     "@multiversx/sdk-extension-provider": "3.0.0",
     "@multiversx/sdk-hw-provider": "7.0.0",
+    "@multiversx/sdk-metamask-provider": "^0.0.7",
     "@multiversx/sdk-native-auth-client": "1.0.9",
     "@multiversx/sdk-network-providers": "2.7.1",
     "@multiversx/sdk-wallet": "4.5.1",
