--- a/signing-providers/package.json
+++ b/signing-providers/package.json
@@ -15,9 +15,11 @@
     "@multiversx/sdk-native-auth-client": "1.0.9",
     "@multiversx/sdk-wallet": "4.5.1",
     "@multiversx/sdk-wallet-connect-provider": "4.1.3",
-    "@multiversx/sdk-web-wallet-cross-window-provider": "1.0.0",
+    "@multiversx/sdk-web-wallet-cross-window-provider": "2.0.1",
+    "@multiversx/sdk-web-wallet-iframe-provider": "2.0.0",
     "@multiversx/sdk-web-wallet-provider": "3.2.1",
     "@multiversx/sdk-webview-provider": "1.0.0",
+    "protobufjs": "^7.4.0",
     "punycode": "2.3.0",
     "qrcode": "1.5.1",
     "qs": "6.10.3"
