--- a/signing-providers/package.json
+++ b/signing-providers/package.json
@@ -16,7 +16,7 @@
     "@multiversx/sdk-wallet-connect-provider": "5.0.0",
     "@multiversx/sdk-web-wallet-cross-window-provider": "2.0.1",
     "@multiversx/sdk-web-wallet-iframe-provider": "2.0.0",
-    "@multiversx/sdk-web-wallet-provider": "4.1.0-beta.1",
+    "@multiversx/sdk-web-wallet-provider": "4.1.0",
     "@multiversx/sdk-webview-provider": "2.0.0-alpha.0",
     "protobufjs": "^7.4.0",
     "punycode": "2.3.0",
