--- a/signing-providers/package.json
+++ b/signing-providers/package.json
@@ -4,7 +4,9 @@
   "description": "Examples",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "eslint . --ext .js,.jsx",
+    "lint:fix": "eslint . --ext .js,.jsx --fix"
   },
   "author": "MultiversX",
   "dependencies": {
@@ -24,11 +26,15 @@
     "qs": "6.10.3"
   },
   "devDependencies": {
-    "@types/node": "18.0.3",
     "crypto-browserify": "3.12.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-html": "^8.1.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.5.0",
     "path-browserify": "1.0.1",
+    "prettier": "^3.5.3",
     "stream-browserify": "3.0.0",
-    "typescript": "4.7.4",
     "webpack": "5.94.0",
     "webpack-cli": "4.8.0"
   }
