--- a/signing-providers/package.json
+++ b/signing-providers/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack",
-    "lint": "eslint . --ext .js,.jsx",
-    "lint:fix": "eslint . --ext .js,.jsx --fix"
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix"
   },
   "author": "MultiversX",
   "dependencies": {
