--- a/signing-providers/.prettierrc
+++ b/signing-providers/.prettierrc
@@ -1,8 +1,6 @@
 {
-  "singleQuote": false,
-  "semi": true,
-  "tabWidth": 2,
-  "bracketSpacing": true,
-  "arrowParens": "always",
-  "printWidth": 100
+    "singleQuote": false,
+    "trailingComma": "all",
+    "tabWidth": 4,
+    "printWidth": 120
 }
