--- a/wallet/package.json
+++ b/wallet/package.json
@@ -5,8 +5,7 @@
   "scripts": {},
   "author": "MultiversX",
   "dependencies": {
-    "axios": "1.7.7",
-    "@multiversx/sdk-core": "13.15.0"
-  },
-  "devDependencies": {}
+    "@multiversx/sdk-core": "15.0.0",
+    "axios": "^1.11.0"
+  }
 }
